--- a/app/src/main/res/layout/como_ajudar.xml
+++ b/app/src/main/res/layout/como_ajudar.xml
@@ -1,36 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/cc">
 
     <TextView
         android:id="@+id/textViewTitulo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="64dp"
+        android:background="@color/aa"
         android:gravity="center"
-        android:text="Como Ajudar"
+        android:text="Como Posso Ajudar?"
+        android:textColor="@color/white"
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textViewInformacoes"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="455dp"
         android:layout_below="@id/textViewTitulo"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="@color/ee"
+        android:textColor="@color/white"
         android:text="Aqui estão algumas maneiras de ajudar a Economia Azul:\n\n1. Reduza o uso de plástico descartável.\n\n2. Participe de iniciativas de limpeza costeira.\n\n3. Apoie empresas e produtos sustentáveis.\n\n4. Eduque-se sobre os oceanos e sua importância para o planeta.\n\n5. Contribua para organizações de conservação marinha.\n\n6. Pratique pesca sustentável.\n\n7. Promova a conscientização sobre a importância dos oceanos para a vida na Terra."
         android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/buttonVoltar"
-        android:layout_width="wrap_content"
+    <Toolbar
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="145dp"
-        android:text="Voltar" />
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/background_toolbar" />
+
+    <ImageView
+        android:id="@+id/home"
+        android:layout_width="73dp"
+        android:layout_height="50dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="166dp"
+        android:layout_marginBottom="6dp"
+        android:src="@drawable/ic_home" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="49dp"
+        android:layout_height="46dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="6dp"
+        android:src="@drawable/ic_buscar_search" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="59dp"
+        android:layout_height="46dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="7dp"
+        android:src="@drawable/ic_baseline" />
 
 </RelativeLayout>
