--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -26,8 +26,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="271dp"
+        android:background="@drawable/button"
         android:text="Enviar" />
 
     <Button
@@ -36,8 +40,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="113dp"
+        android:background="@drawable/button"
         android:text="Voltar" />
 
 </RelativeLayout>
