--- a/app/src/main/res/layout/sobre.xml
+++ b/app/src/main/res/layout/sobre.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/cc">
+
 
     <TextView
         android:id="@+id/textViewTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="0dp"
+        android:background="@color/white"
         android:gravity="center"
         android:text="Sobre"
         android:textSize="24sp" />
@@ -18,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewTitulo"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="16dp"
         android:text="Projeto: All4Ocean"
         android:textSize="18sp" />
@@ -29,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewProjeto"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="58dp"
         android:layout_marginEnd="16dp"
         android:text="Economia Azul: Informações sobre a Economia Azul aqui..."
         android:textSize="18sp" />
@@ -42,6 +46,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="158dp"
         android:layout_marginBottom="145dp"
+        android:background="@drawable/button"
         android:text="Voltar" />
 
 </RelativeLayout>
