--- a/app/src/main/res/layout/activity_curiosidade_detalhe.xml
+++ b/app/src/main/res/layout/activity_curiosidade_detalhe.xml
@@ -8,6 +8,5 @@
         android:id="@+id/textViewDetalhe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"/>
+        android:textSize="18sp" />
 </RelativeLayout>
