--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -16,7 +16,7 @@
         android:drawableEnd="@drawable/ic_email"
         android:background="@drawable/background_edittext"
         android:padding="12dp"
-        android:hint="Email"
+        android:hint="@string/email"
         android:ems="10"
         android:inputType="textEmailAddress" />
 
@@ -32,7 +32,7 @@
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="271dp"
         android:background="@drawable/button"
-        android:text="Enviar" />
+        android:text="@string/enviar" />
 
     <Button
         android:id="@+id/button3"
@@ -46,6 +46,6 @@
         android:layout_marginEnd="150dp"
         android:layout_marginBottom="113dp"
         android:background="@drawable/button"
-        android:text="Voltar" />
+        android:text="@string/voltar" />
 
 </RelativeLayout>
