--- a/app/src/main/res/layout/atulizarcadastro.xml
+++ b/app/src/main/res/layout/atulizarcadastro.xml
@@ -6,37 +6,49 @@
     android:background="@color/bb">
 
     <Toolbar
+        android:id="@+id/tollbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_toolbar"
         android:titleMarginStart="60dp"
-        android:title="Vamos atualizar o seu Cadastro"/>
+        android:title="@string/vamos_atualizar_o_seu_cadastro"/>
 
     <EditText
         android:id="@+id/nome"
-        android:layout_width="314dp"
-        android:layout_height="39dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="212dp"
-        android:layout_marginEnd="47dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_below="@+id/tollbar"
+        android:drawableEnd="@drawable/ic_email"
+        android:hint="@string/nome"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:backgroundTint="#FFFFFF"
+        android:maxLines="1"
+        android:padding="12dp"
+        android:textSize="18sp"
         android:background="@drawable/background_edittext"
-        android:ems="10"
-        android:inputType="text"
-        android:hint="  Nome:"/>
+        android:autofillHints="name" />
 
     <EditText
         android:id="@+id/Telefone"
-        android:layout_width="314dp"
-        android:layout_height="39dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_below="@+id/nome"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="50dp"
+        android:hint="@string/telefone"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:backgroundTint="#FFFFFF"
+        android:maxLines="1"
+        android:padding="12dp"
+        android:textSize="18sp"
         android:background="@drawable/background_edittext"
-        android:hint="  Telefone:"/>
+        android:autofillHints="phone" />
 
 
     <Toolbar
@@ -82,7 +94,8 @@
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:background="@drawable/button"
-        android:text="Salvar" />
+        android:textColor="@color/white"
+        android:text="@string/salvar" />
 
 
 </RelativeLayout>
