--- a/app/src/main/res/layout/curiosidades.xml
+++ b/app/src/main/res/layout/curiosidades.xml
@@ -2,13 +2,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/aa">
+    android:background="@color/ee">
 
     <Toolbar
+        android:id="@+id/tollbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_toolbar"
-        android:title="25 CURIOSIDADES SOBRE OS OCEANOS"/>
+        android:outlineAmbientShadowColor="@color/ee"
+        android:title="@string/_25_curiosidades_sobre_os_oceanos"/>
+
+    <Toolbar
+        android:id="@+id/toolbar4"
+        android:layout_width="match_parent"
+        android:layout_height="182dp"
+        android:layout_below="@+id/tollbar"
+        android:background="@drawable/oceano_mar" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/List"
+        android:layout_width="match_parent"
+        android:layout_height="371dp"
+        android:layout_below="@+id/toolbar4"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:background="@color/white" />
 
     <Button
         android:id="@+id/button4"
@@ -18,15 +37,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="33dp"
-        android:text="Button" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/List"
-        android:layout_width="match_parent"
-        android:layout_height="581dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="56dp"
-        android:background="@color/white" />
+        android:background="@drawable/button"
+        android:textColor="@color/white"
+        android:text="@string/voltar" />
 </RelativeLayout>
