--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -11,17 +11,6 @@
         android:layout_height="223dp"
         android:background="@drawable/oceano_mar" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="212dp"-->
-<!--        android:layout_alignParentTop="true"-->
-<!--        android:layout_alignParentEnd="true"-->
-<!--        android:layout_marginTop="2dp"-->
-<!--        android:layout_marginEnd="0dp"-->
-<!--        android:src="@drawable/oceano_mar"-->
-<!--        android:contentDescription="Image" />-->
-
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
@@ -31,7 +20,7 @@
         android:layout_marginEnd="20dp"
         android:layout_below="@+id/tollbar"
         android:drawableEnd="@drawable/ic_email"
-        android:hint="email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:backgroundTint="#FFFFFF"
@@ -48,7 +37,7 @@
         android:layout_below="@id/email"
         android:layout_marginTop="35dp"
         android:padding="12dp"
-        android:hint="Senha"
+        android:hint="@string/senha"
         android:inputType="textPassword"
         android:background="@drawable/background_edittext"
         android:layout_marginStart="20dp"
@@ -62,7 +51,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
         android:textColor="@color/white"
-        android:text="Esqueci a Senha"/>
+        android:text="@string/esqueci_a_senha"/>
 
 
     <Button
@@ -74,7 +63,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/button"
-        android:text="Entrar" />
+        android:text="@string/entrar" />
 
     <Button
         android:id="@+id/ButtonCadastro"
@@ -85,6 +74,6 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/button"
-        android:text="Cadastrar"/>
+        android:text="@string/cadastrar"/>
 
 </RelativeLayout>
