--- a/app/src/main/res/layout/recyclerview.xml
+++ b/app/src/main/res/layout/recyclerview.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textViewCuriosidade"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Curiosidade"
+        android:text="@string/Curiosidade"
         android:textSize="16sp"
         android:textColor="@android:color/black"/>
 </LinearLayout>
