--- a/app/src/main/res/layout/como_ajudar.xml
+++ b/app/src/main/res/layout/como_ajudar.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,27 +13,31 @@
         android:textColor="@color/white"
         android:textSize="24sp" />
 
-    <TextView
-        android:id="@+id/textViewInformacoes"
-        android:layout_width="match_parent"
-        android:layout_height="455dp"
+    <ScrollView
+        android:layout_width="407dp"
+        android:layout_height="569dp"
+        android:layout_above="@id/toolbar"
         android:layout_below="@id/textViewTitulo"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="50dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="13dp"
         android:layout_marginEnd="5dp"
-        android:background="@color/ee"
-        android:textColor="@color/white"
-        android:text="@string/informacoes_como_ajudar"
-        android:textSize="18sp" />
+        android:layout_marginBottom="29dp">
+
+        <TextView
+            android:id="@+id/textViewInformacoes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/ee"
+            android:text="@string/informacoes_como_ajudar"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+    </ScrollView>
 
     <Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
         android:background="@drawable/background_toolbar" />
 
     <ImageView
