--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -58,19 +58,20 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editTextTextPassword2"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="149dp"
         android:layout_marginTop="129dp"
-        android:layout_marginEnd="160dp"
+        android:layout_marginEnd="145dp"
         android:background="@drawable/button"
         android:text="@string/cadastrar" />
 
     <Button
         android:id="@+id/buttonVoltar"
-        android:layout_width="wrap_content"
+        android:layout_width="110dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/button"
         android:layout_alignParentStart="true"
