--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -63,6 +63,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/button"
+        android:textColor="@color/white"
         android:text="@string/entrar" />
 
     <Button
@@ -74,6 +75,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/button"
+        android:textColor="@color/white"
         android:text="@string/cadastrar"/>
 
 </RelativeLayout>
