--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -4,6 +4,14 @@
     android:layout_height="match_parent"
     android:background="@color/cc">
 
+    <Toolbar
+        android:id="@+id/tollbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_toolbar"
+        android:titleMarginStart="73dp"
+        android:title="@string/vamos_atualizar_o_seu_email"/>
+
     <EditText
         android:id="@+id/EmailAddress"
         android:layout_width="match_parent"
@@ -40,10 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:layout_centerInParent="true"
-        android:layout_marginEnd="150dp"
+        android:layout_marginEnd="161dp"
         android:layout_marginBottom="113dp"
         android:background="@drawable/button"
         android:text="@string/voltar" />
