--- a/app/src/main/res/layout/activity_curiosidade_detalhe.xml
+++ b/app/src/main/res/layout/activity_curiosidade_detalhe.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cc">
@@ -18,7 +19,8 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:fillViewport="true"
+            tools:ignore="UselessParent">
 
             <TextView
                 android:id="@+id/textViewDetalhe"
