--- a/app/src/main/res/layout/reset_password_activity.xml
+++ b/app/src/main/res/layout/reset_password_activity.xml
@@ -39,6 +39,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="271dp"
+        android:textColor="@color/white"
         android:background="@drawable/button"
         android:text="@string/enviar" />
 
@@ -52,6 +53,7 @@
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="113dp"
         android:background="@drawable/button"
+        android:textColor="@color/white"
         android:text="@string/voltar" />
 
 </RelativeLayout>
